Add relation customer products
