# src/main/webapp/META-INF/stub/swagger.yaml
@@ -62,6 +62,19 @@ paths:
           schema:
             type: "string"
       operationId: "deleteCustomer"
+  /customers/email/{email}:
+    parameters:
+    - name: "email"
+      type: "string"
+      required: true
+      in: "path"
+    get:
+      responses:
+        200:
+          description: "200 OK"
+          schema:
+            $ref: "#/definitions/customer"
+      operationId: "getCustomerByEmail"
   /accounts:
      get:
         responses:
